# vArI-ocean-plastics-drift-forecaster

./: .gitignore  Implementation_Plan.md  LICENSE  Ocean_Plastic_Drift_CS_Technical_Report.md  README.md  task.md
AI/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
AI/.github/workflows/: ci.yml
AI/Pranav/: Visual Studio Code.lnk  advanced_ocean_plastic.py  check_data.py  cmems_data_downloader.py  enhanced_ocean_plastic_rl.py  global_ocean_plastic_prediction.py  global_ocean_plastic_prediction_from_50_sources.py  global_plastic_results.json  government_report.txt  nc_to_csv.py  ocean_map_visualization.py  ocean_plastic_rl.py  one_day_prediction.py  requirements.txt  results.json
AI/Pranav/ocean_data/: drifter_validation.csv
AI/docs/: code_overview.md  framework.md
AI/igoel/: drift_env.py  requirements.txt  summary.md  train_sb3.py
AI/ocean-driftcast/: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  RUN_ALL.md
AI/ocean-driftcast/.claude/: settings.local.json
AI/ocean-driftcast/configs/: natl_coastal.yaml  natl_shipping.yaml  natl_subtropical_gyre.yaml
AI/ocean-driftcast/docs/: credits.md  demo_script.md  index.md  judging.md  onepager.md  script.srt
AI/ocean-driftcast/driftcast/: __init__.py  cli.py  config.py
AI/scripts/: clean_gdp_csv.py  download_era5.py  download_era5_wind.py  download_hycom_subset.py  era5_bulk.py  ocean_helpers.ps1  validate_against_drifters.py
AI/src/: __init__.py  config.py  data.py  forecast.py  sim.py  viz.py
AI/tests/: test_all.py
archive/: package.json  pnpm-lock.yaml
(+80 files in other folders)
