# DriftCast project configuration for tooling and packaging.
# Defines formatting (black), linting (ruff), and type-checking (mypy) defaults.
# Ensure local editors/CI pick up the same rules.

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = ["data", "models", "docs/plots", "runs"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W", "C90"]
ignore = ["E203", "E266", "E501"]
exclude = ["data", "models", "docs/plots", "runs"]

[tool.ruff.per-file-ignores]
"tests/test_all.py" = ["D"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
exclude = "(data|models|docs/plots|runs)"

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"
